hphp/hack/test/typecheck/idx3_2.php.exp
File "idx3_2.php", line 10, characters 10-11:
Invalid return type (Typing[4110])
File "idx3_2.php", line 7, characters 15-20:
This is a string
File "idx3_2.php", line 3, characters 27-29:
It is incompatible with an int
File "collections/Map.hhi", line 57, characters 63-64:
  via this generic Tv
File "collections/interfaces.hhi", line 1126, characters 63-64:
  via this generic Tv
File "collections/interfaces.hhi", line 856, characters 56-57:
  via this generic Tv
